--- a/src/lib/editor-testbed.scss
+++ b/src/lib/editor-testbed.scss
@@ -13,12 +13,13 @@
 
 .editor-container {
   width: 100%;
-  height: 450px;
+  height: 400px;
 }
 
 .controls-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 16px;
 }
 
 .btn {
