--- a/editor-client/src/lib/editor-testbed.scss
+++ b/editor-client/src/lib/editor-testbed.scss
@@ -30,3 +30,10 @@ textarea {
   gap: 16px;
   align-items: center;
 }
+
+.selection-state {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
