feat: add more labels

--- a/editor-client/src/lib/editor-testbed.scss
+++ b/editor-client/src/lib/editor-testbed.scss
@@ -31,7 +31,7 @@ textarea {
   align-items: center;
 }
 
-.selection-state {
+.stack {
   display: flex;
   flex-direction: column;
   align-items: center;
